--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  flutter_spinkit: ^4.1.2+1
+  device_preview: ^0.4.5
+  http: ^0.12.0+1
+  flutter_bloc: ^4.0.0
+  flutter_screenutil: ^1.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
