--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   flutter_spinkit: ^4.1.2+1
   device_preview: ^0.4.5
+  flare_flutter: ^2.0.3
+  #flutter_icons: ^1.1.0
   http: ^0.12.0+1
   flutter_bloc: ^4.0.0
   flutter_screenutil: ^1.1.0
@@ -48,8 +50,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/Guss.flr
+    - assets/Guss1.flr
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
