--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   device_preview: ^0.4.5
   flare_flutter: ^2.0.3
-  #flutter_icons: ^1.1.0
+  flutter_icons: ^1.1.0
+  flutter_launcher_icons: ^0.7.5
   http: ^0.12.0+1
   flutter_bloc: ^4.0.0
   flutter_screenutil: ^1.1.0
@@ -37,7 +38,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/number_trivia.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -53,6 +57,7 @@ flutter:
   assets:
     - assets/Guss.flr
     - assets/Guss1.flr
+    - assets/number_trivia_logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
